	* Preferences are now saved on every setting change, not on app. exit
	* Fixed issues in configure script
	* Changed automake script to sync with configure script
	* Both Toolbar button and menu now reads "Notify", earlier it was Notify 
	  and Notifications.
	* All characters other than alpha numeric, -, _ and blank space are stripped
	  on either side of the selection cllipboard text.

version 0.7.1 (Jan 29, 2009):
	* Fixed Tooltip for Meronyms in relative tabs/trees.
	* Fixed tree store unreferencing when creating tree stores for relatives
	* Focus to the Query field is now set on pop-up
	* 'Report a Bug' button added to About dialog box
	* Fixed an issue regarding the welcome message, when notifications are disabled.
	* libdus threads init function called using its GLib bindings

version 0.7.0 (Jan 23, 2009):
	* 3 more hot key combos added (so now it is Ctrl + Alt + [W|A|T|Q]) to 
	  the list of hot keys. Artha will try setting them in this order. If 
	  none succeeds, the Notifications feature is disabled properly.
	* On first run or when the hot key changes w.r.t the prev. run, Artha 
	  shows a message box with details as a help to the user.

version 0.6.5:
	* Last set preferences are stored in a .conf file (persistent settings).
	* gtk_show_uri's availability now found in run-time.

version 0.6.4:
	* 'Attributes' tab gets renamed (Attributes/Attribute of) based on the 
	  POS (NOUN/ADJ) of the term's attribute item
	* Shortcut in Applications Menu using .desktop file implemented

version 0.6.3:
	* Man page added, with minimal briefing.
	* Link hooks for email/url in About screen created.

version 0.6.2:
	* Status Bar is now updated based on the latest search results.
	* Fixed not searching of an already searched term immediately after a failed 
	  search bug.

version 0.6.1:
	* Relatives List double-click/return handled, to jump to the corresponding term.
	* About box created, licences & credits mentioned and made part of the GUI.