@@ -20,6 +20,8 @@
  
 #pragma once
 
+#include <string.h>
+
 #include <glib.h>
 #include <glib/gprintf.h>
 
@@ -193,5 +195,6 @@ typedef struct _tree_list WNITreeList;
 // WNI Exposed functions
 extern void wni_request_nyms(gchar *search_str, GSList **response_list, WNIRequestFlags additional_request_flags, gboolean advanced_mode);
 extern void wni_free(GSList **response_list);
+extern int wni_strcmp0(const char *s1, const char *s2);
 
 
